Ajout de l'état.
Début de la couleur pour la l'état

--- a/kanban.front/src/main/resources/vertx-default-jul-logging.properties
+++ b/kanban.front/src/main/resources/vertx-default-jul-logging.properties
@@ -6,7 +6,7 @@ java.util.logging.FileHandler.level=ALL
 java.util.logging.FileHandler.formatter=io.vertx.core.logging.VertxLoggerFormatter
 
 # Put the log in the system temporary directory
-java.util.logging.FileHandler.pattern=D:/Projets/Kanban/workspace/DKanban/kanban.front/logs/vertx.log
+java.util.logging.FileHandler.pattern=D:/Backup/Package/eclipse-mars/workspace/logs/vertx.log
 
 .level=INFO
 io.vertx.level=SEVERE
