--- a/kanban.front/src/main/resources/vertx-default-jul-logging.properties
+++ b/kanban.front/src/main/resources/vertx-default-jul-logging.properties
@@ -6,7 +6,7 @@ java.util.logging.FileHandler.level=ALL
 java.util.logging.FileHandler.formatter=io.vertx.core.logging.VertxLoggerFormatter
 
 # Put the log in the system temporary directory
-java.util.logging.FileHandler.pattern=vertx.log
+java.util.logging.FileHandler.pattern=logs/vertx.log
 
 .level=INFO
 io.vertx.level=SEVERE
