--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
 
 	<dependencies>
 		<dependency>
+            <groupId>io.reactivex</groupId>
+            <artifactId>rxjava</artifactId>
+            <version>1.0.11</version>
+        </dependency>
+     
+		<dependency>
 			<groupId>io.vertx</groupId>
 			<artifactId>vertx-core</artifactId>
 			<version>${vertx.version}</version>
